// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoginLayout Snapshots should match snapshot 1`] = `
<div
  class="loginLayout ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-stretch ant-flex-justify-space-between ant-flex-vertical"
>
  <div
    class="header ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center ant-flex-justify-space-between"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center"
      style="gap: 10px;"
    >
      <img
        alt="Document Atom"
        data-nimg="1"
        decoding="async"
        height="45"
        loading="lazy"
        src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
        srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
        style="color: transparent;"
        width="45"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-12q6fii css-var-root"
        style="font-size: 20px;"
      >
        Document Atom
      </span>
    </div>
    <button
      aria-label="Switch to dark mode"
      aria-pressed="false"
      style="position: relative; width: 20px; height: 20px; padding: 0px; background: transparent; cursor: pointer; color: currentcolor; line-height: 0;"
      type="button"
    >
      <span
        style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: rotate(0deg) scale(1);"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <circle
            cx="12"
            cy="12"
            r="5"
          />
          <line
            x1="12"
            x2="12"
            y1="1"
            y2="3"
          />
          <line
            x1="12"
            x2="12"
            y1="21"
            y2="23"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="4.22"
            y2="5.64"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="18.36"
            y2="19.78"
          />
          <line
            x1="1"
            x2="3"
            y1="12"
            y2="12"
          />
          <line
            x1="21"
            x2="23"
            y1="12"
            y2="12"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="19.78"
            y2="18.36"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="5.64"
            y2="4.22"
          />
        </svg>
      </span>
      <span
        style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: rotate(90deg) scale(0.6);"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="content"
  >
    <div>
      Test Content
    </div>
  </div>
  <div
    class="footer ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center ant-flex-justify-center"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-12q6fii css-var-root"
      style="color: rgb(193, 193, 193);"
    />
  </div>
</div>
`;

exports[`LoginLayout Snapshots should match snapshot in dark mode 1`] = `
<div
  class="loginLayout ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-stretch ant-flex-justify-space-between ant-flex-vertical"
>
  <div
    class="header ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center ant-flex-justify-space-between"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center"
      style="gap: 10px;"
    >
      <img
        alt="Document Atom"
        data-nimg="1"
        decoding="async"
        height="45"
        loading="lazy"
        src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
        srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
        style="color: transparent;"
        width="45"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-12q6fii css-var-root"
        style="font-size: 20px;"
      >
        Document Atom
      </span>
    </div>
    <button
      aria-label="Switch to light mode"
      aria-pressed="true"
      style="position: relative; width: 20px; height: 20px; padding: 0px; background: transparent; cursor: pointer; color: currentcolor; line-height: 0;"
      type="button"
    >
      <span
        style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: rotate(-90deg) scale(0.6);"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <circle
            cx="12"
            cy="12"
            r="5"
          />
          <line
            x1="12"
            x2="12"
            y1="1"
            y2="3"
          />
          <line
            x1="12"
            x2="12"
            y1="21"
            y2="23"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="4.22"
            y2="5.64"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="18.36"
            y2="19.78"
          />
          <line
            x1="1"
            x2="3"
            y1="12"
            y2="12"
          />
          <line
            x1="21"
            x2="23"
            y1="12"
            y2="12"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="19.78"
            y2="18.36"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="5.64"
            y2="4.22"
          />
        </svg>
      </span>
      <span
        style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: rotate(0deg) scale(1);"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <path
            d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="content"
  >
    <div>
      Test Content
    </div>
  </div>
  <div
    class="footer ant-flex css-dev-only-do-not-override-12q6fii css-var-root ant-flex-align-center ant-flex-justify-center"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-12q6fii css-var-root"
      style="color: rgb(193, 193, 193);"
    />
  </div>
</div>
`;
